fix line-height 0 li on firefox

--- a/styles/components/_faq.scss
+++ b/styles/components/_faq.scss
@@ -5,10 +5,22 @@
     margin: 0;
     color: transparent;
     transition:
-            font-size 500ms ease,
             line-height 500ms ease,
             color 500ms ease,
             margin 500ms ease;
+  }
+
+  li {
+    position: relative;
+    display: block;
+
+    &:before {
+      position: absolute;
+      left: -1rem;
+      content: "•";
+      font-size: 1.2rem;
+      top: 0.05rem;
+    }
   }
 
   input {
@@ -24,9 +36,15 @@
     margin: 0.67em 0;
   }
 
-  input:checked ~ *:not(input):not(label) {
-    line-height: 125%;
-    margin: 0 0 1rem;
-    color: black;
+  input:checked  {
+    & ~ *:not(input):not(label) {
+      line-height: 125%;
+      margin: 0 0 1rem;
+      color: black;
+    }
+
+    & ~ ul li {
+      //max-height: 200px;
+    }
   }
 }
